# PUBLIKAI

./: .env.example  .gitattributes  .gitignore  README.md  SPEC.md  app.py  astro.config.mjs  build.gradle.kts  package-lock.json  package.json  pyproject.toml  settings.gradle.kts  spec.md  tailwind.config.cjs
api/: __init__.py  __main__.py  settings.py  system.py
api/backend/: __init__.py  bin.py
api/functions/: __init__.py  business.py  info.py  news.py  notice.py  program.py  tour.py  work.py
api/models/: base.py  config.py
api/models/midm2/: __init__.py  model.py
api/models/qwen3/: __init__.py  model.py
api/src/main/: server.ipynb  server.py  settings.py
api/src/main/backend/: __init__.py  bin.py  core.py  gguf.py  gptq.py
api/src/main/functions/: __init__.py  cafeteria.py  calendar.py  notice.py  shuttle.py
api/src/main/models/: base.py  config.py  llama3.py
api/src/main/models/cnuma3/: __init__.py  classifier.py  cnu.py  function.py  model.py  q.py  train.py  valid.json  valid_shifted.json
api/src/main/models/llama3/: __init__.py  (+1 more)
api/src/main/utils/: __init__.py  calculator.py  calendar.py  weather.py  web_search.py
api/src/test/static/: index.css  index.html  index.py
api/src/test/webpack/: gemstone.js  gemstone.js.map  gemstone.mjs  gemstone.uninstantiated.mjs  gemstone.wasm.map  index.html
api/utils/: __init__.py  currency.py  embedding.py  weather.py  web_search.py
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/desktopMain/resources/: complex_black.icns  complex_white.icns  simple_black.icns  simple_white.icns
app/src/wasmJsMain/resources/: index.html
dashboard/: astro.config.mjs  cheonan_urban_regeneration_center.md  package-lock.json
dashboard/app/: FooterSidebar.astro  LayoutCommon.astro  LayoutSidebar.astro  NavBarSidebar.astro  SideBar.astro
dashboard/components/: ChartApex.astro  ChatBot.astro  CopyrightNotice.astro  FileDownloadBlock.astro  FileDownloadBlockGrouped.astro  MonthlyBudget.astro  MonthlyPerformance.astro  MonthlyRegeneration.astro  Yearlyview.astro
dashboard/lib/: data.ts  entities.ts  fileUtils.ts
dashboard/modules/: CrudEntities.client.ts  PricingPlan.astro
dashboard/pages/: favicon.svg.ts  index.astro  introduction.md  introduction.mdx  monthly.mdx  welcome.mdx  yearly.mdx
dashboard/pages/api/: [...entity].ts  chatbot.css  chatbot.html  chatbot.py
dashboard/pages/api/crud/: _actions.ts  products.astro  users.astro
dashboard/pages/api/models/: config.py
dashboard/pages/errors/: 404.astro
dashboard/sections/: introduction.mdx  monthly.mdx  news.mdx  participation.mdx  welcome.mdx  yearly.mdx
dashboard/services/: products.ts  users.ts
dashboard/src/app/: constants.ts
dashboard/static/: index.css  index.html  index.py
dashboard/webpack/: gemstone.html  gemstone.js  index.html
data/: agedHomes.json  monthlyBudget.json  monthlyRegeneration.json  perfComplaints.json  perfParticipation.json  perfSocial.json  renewedHomes.json  satisfaction.json
gradle/: libs.versions.toml
horizon-ui-chakra/: .gitignore
(+123 files in other folders)
