[project]
name = "fluxchatui"
version = "1.0.0"
description = "This is a open-source multi-platform AI Chat UI written with Compose Multiplatform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "websockets>=15.0.1",
    "hf-xet>=1.1.2",
    "huggingface_hub>=0.31.2",
    "transformers>=4.45.3",
    "bitsandbytes>=0.45.5",
    "llama-cpp-python",
    "torchvision",
    "torchaudio",
    "torch",
]  # !do not add version-specfic torch here!
