[project]
name = "publikai"
version = "1.0.0"
description = "An intelligent chatbot generator designed for public sector websites to create AI assistants for citizen services and government information."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "websockets>=15.0.1",
    "hf-xet>=1.1.2",
    "bs4>=0.0.2",
    "serpapi>=0.1.5",
    "python-dotenv>=1.1.0",
    "huggingface_hub>=0.31.2",
    "transformers>=4.45.3",
    "bitsandbytes>=0.45.5",
    "accelerate>=1.7.0",
    "llama-cpp-python @ https://github.com/thisisthepy/llama-cpp-python/releases/download/v0.3.9/llama_cpp_python-0.3.9-cp311-cp311-win_amd64.whl ; python_version == '3.11' and platform_system == 'Windows'",
    "llama-cpp-python @ https://github.com/thisisthepy/llama-cpp-python/releases/download/v0.3.9/llama_cpp_python-0.3.9-cp312-cp312-win_amd64.whl ; python_version == '3.12' and platform_system == 'Windows'",
    "llama-cpp-python @ https://github.com/thisisthepy/llama-cpp-python/releases/download/v0.3.9/llama_cpp_python-0.3.9-cp311-cp311-linux_x86_64.whl ; python_version == '3.11' and platform_system == 'Linux'",
    "llama-cpp-python @ https://github.com/thisisthepy/llama-cpp-python/releases/download/v0.3.9/llama_cpp_python-0.3.9-cp312-cp312-linux_x86_64.whl ; python_version == '3.12' and platform_system == 'Linux'",
    "llama-cpp-python>=0.3.9 ; platform_system != 'Windows' and platform_system != 'Linux'",
    "pynvml>=12.0.0 ; platform_system == 'Windows'",
    "pynvml>=12.0.0 ; platform_system == 'Linux'",
    "torch ; platform_system == 'Windows'",
    "torchvision ; platform_system == 'Windows'",
    "torchaudio ; platform_system == 'Windows'",
    "torch ; platform_system == 'Linux'",
    "torchvision ; platform_system == 'Linux'",
    "torchaudio ; platform_system == 'Linux'",
    "torchaudio ; platform_system == 'Linux'",
    #"langchain",
    #"faiss-cpu",
    #"sentence-transformers"
]  # !do not add version-specfic torch here!


[tool.uv.sources]
torch = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
torchvision = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
torchaudio = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]


[[tool.uv.index]]
name = "pytorch-windows"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
